2007-07-29  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: New documentation.

	* Makefile: Unused rules are removed; it now can
	make tarballs.

2007-07-29  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: Copy of manakai's |lib/Message/Charset/Makefile|.

	* ChangeLog: New file.
