@@ -29,7 +29,7 @@ to develope Perl modules related to character encoding.</p>
   want to enable the module
   <a href="http://suika.fam.cx/www/markup/html/whatpm/Whatpm/Charset/DecodeHandle.html"><code>Whatpm::Charset::DecodeHandle</code></a>
   to decode <code>ISO-2022-JP</code>-encoded text.</dd>
-<dt><a href="Encode-EUCJP1997-0.01.tar.gz"><code>Encode::EUCJP1997</code></a>
+<dt><a href="Encode-EUCJP1997-0.02.tar.gz"><code>Encode::EUCJP1997</code></a>
 (tar + gzip, 77ko)</dt>
   <dd>It is necessary to install this Perl module if you
   want to enable the module
@@ -68,7 +68,7 @@ be compiled before they get ready to be used.</p>
 <div class="section" id="license">
 <h2>License</h2>
 
-<p>Copyright 2006, 2007 Wakaba 
+<p>Copyright 2006-2008 Wakaba 
 <code class="mail">&lt;<a href="mailto:w@suika.fam.cx"
     rel="author">w@suika.fam.cx</a>></code>.</p>
 
