@@ -1,3 +1,9 @@
+2008-09-15  Wakaba  <wakaba@suika.fam.cx>
+
+	* readme.en.html: Link updated.
+
+	* Makefile: EUCJP1997's version incremented.
+
 2007-07-29  Wakaba  <wakaba@suika.fam.cx>
 
 	* readme.en.html: New documentation.
